--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "clsx": "^2.1.1",
     "embla-carousel": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
+    "framer-motion": "^11.5.4",
     "husky": "^9.1.5",
     "lucide-react": "^0.428.0",
-    "next": "14.2.5",
+    "next": "14.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
