--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "14.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-spinners": "^0.15.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
