--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@rive-app/react-canvas": "^4.13.9",
     "@studio-freight/lenis": "^1.0.42",
     "@studio-freight/react-lenis": "^0.0.47",
+    "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
+    "apollo-utilities": "^1.3.4",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -28,7 +30,7 @@
     "embla-carousel-react": "^8.2.0",
     "express": "^4.21.1",
     "framer-motion": "^11.5.4",
-    "graphql": "^16.9.0",
+    "graphql": "^15.8.0", 
     "husky": "^9.1.5",
     "lucide-react": "^0.428.0",
     "next": "14.2.8",
@@ -37,7 +39,8 @@
     "react-spinners": "^0.15.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.167.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -45,10 +48,16 @@
     "@types/node": "^20.17.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
+    "@types/three": "^0.171.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.6.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "graphql": "^15.8.0" 
+    }
   }
 }
