--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@apollo/client": "^3.11.8",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.120.4",
     "@rive-app/react-canvas": "^4.14.5",
@@ -23,7 +25,7 @@
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "apollo-utilities": "^1.3.4",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -38,6 +40,7 @@
     "next": "14.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-spinners": "^0.15.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
